<resources>
    <string name="app_name">Memory Game</string>
    <string name="logo">Logo</string>
    <string name="welcome">How wise are you ?</string>
    <string name="start">Start Game</string>
    <string name="settings">Settings</string>
    <string name="gesture">Gesture</string>
    <string name="music">Music</string>
    <string name="end_game">End Game</string>
    <string name="new_high_score">You have created a new High Score</string>
    <string name="your_score">Your Score :</string>
    <string name="high_score">High Score :</string>
    <string name="share">Share</string>
    <string name="_00_00">00:00</string>
    <string name="score">Score:</string>
    <string name="card">Card</string>
    <string name="flip_card">Flip Card</string>
    <string name="shake_to_shuffle">Shake to shuffle</string>
</resources>